--- a/_includes/main_header.html
+++ b/_includes/main_header.html
@@ -2,6 +2,7 @@
   <span class="logo icon fa-paper-plane-o"></span>
   <h1>{{main_header.heading}}</h1>
   <p>{{site.time}}</a>
+  <p>{{content}}</p>
   <br />
   and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 </div>
