Added first content

--- a/_includes/main_header.html
+++ b/_includes/main_header.html
@@ -1,6 +1,6 @@
 <div id="header">
   <span class="logo icon fa-paper-plane-o"></span>
-  <h1>{{main_header.heading}}</h1>
+  <h1>{{site.main-header.heading}}</h1>
   <p>{{site.time}}</a>
   <p>{{content}}</p>
   <br />
