Added Metadata to main heading

--- a/_includes/main_header.html
+++ b/_includes/main_header.html
@@ -1,7 +1,8 @@
 <div id="header">
   <span class="logo icon fa-paper-plane-o"></span>
   <h1>{{site.main-header.heading}}</h1>
-  <p>{{site.time}}</a>
+  <h3>{{site.title}}</h3>
+  <h4>{{site.variable}}</h4>
   <p>{{content}}</p>
   <br />
   and released for free under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
