--- a/_includes/main_header.html
+++ b/_includes/main_header.html
@@ -1,6 +1,6 @@
 <div id="header">
   <span class="logo icon fa-paper-plane-o"></span>
-  <h1>{{site.main-header.heading}}</h1>
+  <h1>{{ page.main_header.a }} filler content</h1>
   <h3>{{site.title}}</h3>
   <h4>{{site.variable}}</h4>
   <p>{{content}}</p>
